--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,11 @@ django = "*"
 djangorestframework = "*"
 django-rest-auth = "*"
 django-allauth = "*"
+pillow = "~=8.0.0"
+gunicorn = "~=20.0.4"
+whitenoise = "~=5.2.0"
+dj-database-url = "~=0.5.0"
+psycopg2-binary = "~=2.8.6"
 
 [requires]
 python_version = "3.8"
